--- a/store/src/components/Navbar.module.css
+++ b/store/src/components/Navbar.module.css
@@ -15,6 +15,7 @@
     position: fixed;
     width: 100%;
     background-color: var(--white);
+    z-index: 100;
 }
 .navBtnContainer {
     display: flex;
