--- a/store/src/components/NotFound.module.css
+++ b/store/src/components/NotFound.module.css
@@ -32,4 +32,9 @@
     color: var(--secondaryBlue);
     border-radius: 10px;
     margin: 25px 0 0 0;
+    cursor: pointer;
+}
+.NotFoundLink {
+    text-decoration: none;
+    color: var(--secondaryBlue);
 }
