--- a/store/src/components/Product.module.css
+++ b/store/src/components/Product.module.css
@@ -74,4 +74,5 @@
     background-color: var(--thirdBlue);
     color: var(--white);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    cursor: pointer;
 }
