--- a/store/src/components/Header.module.css
+++ b/store/src/components/Header.module.css
@@ -8,7 +8,7 @@
 .Header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 .HeaderTitle {
     display: flex;
