--- a/store/src/components/Footer.module.css
+++ b/store/src/components/Footer.module.css
@@ -14,6 +14,7 @@
     gap: 8rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     padding: 2rem 0 4rem 0;
+    flex-wrap: wrap;
 }
 
 .footerContent {
@@ -78,4 +79,10 @@
 .footerCourses ul > li {
     margin: 0.8rem 0;
     cursor: pointer;
+}
+
+@media screen and (max-width: 660px) {
+    .footer {
+        padding: 2rem 2rem 4rem 2rem;
+    }
 }
