--- a/store/src/components/Header.module.css
+++ b/store/src/components/Header.module.css
@@ -1,24 +1,28 @@
 :root {
-    --secondaryBlue: #1E40AF ;
-    --mainBlue: #BFDBFE ;
-    --white: #fff ;
+    --secondaryBlue: #1E40AF;
+    --mainBlue: #BFDBFE;
+    --white: #fff;
     --fontColor: #344460;
-    --grayColor: #757575 ;
+    --grayColor: #757575;
 }
+
 .Header {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .HeaderTitle {
     display: flex;
     flex-direction: column;
     gap: 4rem;
 }
+
 .HeaderTitleText {
     font-size: 50px;
     font-family: Iryekan;
     color: var(--fontColor);
+    text-align: center;
 }
 
 .HeaderTitleContent {
@@ -60,4 +64,39 @@
 .HeaderBtnContainer {
     display: flex;
     gap: 0.7rem;
+}
+
+.HeaderVector {
+    width: 100% ;
+    height: 100%;
+}
+.HeaderVectorimg {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+
+@media screen and (max-width: 1120px) {
+    .Header {
+        flex-wrap: wrap;
+    }
+
+    .HeaderTitle {
+        order: 1;
+    }
+
+    .HeaderBtnContainer {
+        justify-content: center;
+    }
+
+    .HeaderTitleContent {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .HeaderBtnContainer {
+        flex-wrap: wrap;
+    }
 }
