--- a/store/src/components/Landing.module.css
+++ b/store/src/components/Landing.module.css
@@ -1,6 +1,7 @@
 :root {
-    --grayWhite: #f9fafb ;
+    --grayWhite: #f9fafb;
 }
+
 .main {
     display: flex;
     flex-direction: column;
@@ -19,14 +20,22 @@
         padding: 10rem 10rem 1rem 10rem;
     }
 }
+
 @media screen and (max-width: 1240px) {
     .main {
         padding: 10rem 5rem 1rem 5rem;
     }
 }
+
 @media screen and (max-width: 700px) {
     .main {
         padding: 10rem 2rem 1rem 2rem;
         overflow: hidden;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .main {
+        padding: 10rem 1rem 1rem 1rem;
     }
 }
