Make responsive Landing Text and content

--- a/store/src/components/Header.module.css
+++ b/store/src/components/Header.module.css
@@ -99,4 +99,11 @@
     .HeaderBtnContainer {
         flex-wrap: wrap;
     }
+    .HeaderTitleText {
+        font-size: 25px;
+    }
+    .HeaderTitleContent {
+        font-size: 16px;
+    }
+
 }
