--- a/store/src/components/Footer.module.css
+++ b/store/src/components/Footer.module.css
@@ -86,3 +86,11 @@
         padding: 2rem 2rem 4rem 2rem;
     }
 }
+@media screen and (max-width: 600px) {
+    .footerTopTitle {
+        flex-direction: column;
+        gap: 1rem;
+        text-align: center;
+        padding: 0 0 2rem 0;
+    }
+}
