--- a/store/src/components/ProductsPaginnation.module.css
+++ b/store/src/components/ProductsPaginnation.module.css
@@ -34,3 +34,9 @@
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
+
+@media screen and (max-width: 800px) {
+    .pageinnationContainer {
+        width: 50%;
+    }
+}
