--- a/store/src/components/Login.module.css
+++ b/store/src/components/Login.module.css
@@ -26,7 +26,7 @@
 .logincontainer {
     position: absolute;
     z-index: 12;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--white);
@@ -96,4 +96,30 @@
     font-size: 15px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     cursor: pointer;
+}
+
+.LoginSignInContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , 40%);
+    top: 7rem;
+    z-index: 15;
+    background-color: var(--white);
+    display: flex;
+    align-items: center;
+    border-radius: 3rem;
+    border: 0;
+    outline: none;
+    gap: 1rem;
+}
+.SigninLink , .LoginLink {
+    padding: 1rem 2rem;
+    text-decoration: none;
+    color: var(--secondaryBlue);
+    border-radius: 3rem;
+}
+
+.LoginSignInContainer div {
+    color: var(--secondaryBlue);
 }
