--- a/store/src/components/Login.module.css
+++ b/store/src/components/Login.module.css
@@ -16,7 +16,7 @@
 
 .loginImage {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     position: absolute;
     top: 0;
     right: 0;
@@ -118,6 +118,7 @@
     text-decoration: none;
     color: var(--secondaryBlue);
     border-radius: 3rem;
+    font-size: 17px;
 }
 
 .LoginSignInContainer div {
