Refactor login and signin toggle styles

--- a/store/src/components/Login.module.css
+++ b/store/src/components/Login.module.css
@@ -99,13 +99,25 @@
     outline: none;
     gap: 1rem;
 }
-.SigninLink , .LoginLink {
-    padding: 1rem 2rem;
+
+.SigninLink {
+    padding: 1rem 2rem 1rem 1rem;
     text-decoration: none;
     color: var(--secondaryBlue);
     border-radius: 3rem;
     font-size: 17px;
 }
+
+
+.LoginLink {
+    background-color: var(--secondaryBlue);
+    color: var(--mainBlue);
+    padding: 1.2rem 3rem;
+    border-radius: 3rem;
+    font-size: 17px;
+    text-decoration: none;
+}
+
 
 .LoginSignInContainer div {
     color: var(--secondaryBlue);
