Validate login form data

--- a/store/src/components/Login.module.css
+++ b/store/src/components/Login.module.css
@@ -122,3 +122,11 @@
 .LoginSignInContainer div {
     color: var(--secondaryBlue);
 }
+
+.errorsStyle {
+    background-color: var(--redWhite);
+    color: var(--redColor);
+    width: 15rem;
+    padding: 1px 10px;
+    border-radius: 8px;
+}
