--- a/store/src/components/ProductsPaginnation.module.css
+++ b/store/src/components/ProductsPaginnation.module.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     gap: 0.7rem;
-    background-color: var(--thirdBlue);
+    background-color: var(--secondaryBlue);
     padding: 0.7rem 0;
     border-radius: 7rem;
     width: 20%;
