--- a/store/src/components/Product.module.css
+++ b/store/src/components/Product.module.css
@@ -4,13 +4,24 @@
     --white: #fff;
     --fontColor: #344460;
     --grayColor: #757575;
-    --thirdBlue: #1D4ED8;
+    --FirstgrayColor: #404258;
+    --SecondgrayColor: #50577A;
+    --ThirdgrayColor: #474E68;
+    --ForthgrayColor: #6B728E;
 }
 
 .ProductCart {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     overflow: hidden;
     border-radius: 10px;
+}
+
+.ProductCartDark {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: var(--SecondgrayColor);
+    color: var(--white);
 }
 
 .ProductImage {
@@ -35,6 +46,14 @@
     padding: 5px 0 0 0;
 }
 
+.ProductTimeContainerDark {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 5px 0 0 0;
+    color: var(--white);
+}
+
 .ProductTimeContainer svg {
     padding: 0 0 4px 0;
     width: 1.3rem;
@@ -55,17 +74,34 @@
     padding: 0 0 10px 0;
 }
 
-.ProductLinkContainer a {
+.ProductLinkContainerDark {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--mainBlue);
+    gap: 0.3rem;
+    padding: 0 0 10px 0;
+}
+
+.ProductLinkContainer a , .ProductLinkContainerDark a {
     text-decoration: none;
 }
 
 .ProductLinkContainer a:link {
-    color: var(--thirdBlue);
+    color: var(--secondaryBlue);
+}
+.ProductLinkContainerDark a:link {
+    color: var(--mainBlue);
 }
 
 .ProductLinkContainer a:visited {
-    color: var(--thirdBlue);
+    color: var(--secondaryBlue);
 }
+.ProductLinkContainerDark a:visited {
+    color: var(--mainBlue);
+}
+
+
 
 .ProductBtnContainer {
     width: 100%;
@@ -85,7 +121,7 @@
     outline: none;
     border: 0;
     border-radius: 0.5rem;
-    background-color: var(--thirdBlue);
+    background-color: var(--secondaryBlue);
     color: var(--white);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     cursor: pointer;
