--- a/store/src/components/DetailProduct.module.css
+++ b/store/src/components/DetailProduct.module.css
@@ -7,14 +7,21 @@
     --whiteDark: #fcfcfc ;
     --greenColor: #16A34A ;
     --forthBlue: #3B82F6 ;
+    --FirstgrayColor: #404258;
+    --SecondgrayColor: #50577A;
+    --ThirdgrayColor: #474E68;
+    --ForthgrayColor: #6B728E;
 }
 
-.DetailContainer {
+.DetailContainer , .DetailContainerDark {
     padding: 11rem 0 0 0;
     background-color: var(--whiteDark);
 }
+.DetailContainerDark {
+    background-color: var(--FirstgrayColor);
+}
 
-.DetailsBoxContainer {
+.DetailsBoxContainer , .DetailsBoxContainerDark {
     background-color: var(--white);
     box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
     width: 65%;
@@ -24,10 +31,19 @@
     padding: 2rem;
 }
 
-.ProductDetailContainer {
+.DetailsBoxContainerDark {
+    background-color: var(--ForthgrayColor);
+    color: var(--whiteDark);
+}
+
+.ProductDetailContainer , .ProductDetailContainerDark{
     width: 65%;
     margin: 0 auto;
     padding: 5rem 0;
+}
+
+.ProductDetailContainerDark {
+    color: var(--whiteDark);
 }
 
 .DetailsCourseContainer {
@@ -46,7 +62,7 @@
     height: 20rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
-.BenefitContainer {
+.BenefitContainer , .BenefitContainerDark {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,6 +72,12 @@
 
 .BenefitContainer svg {
     height: 1.2rem;
+}
+.BenefitContainerDark svg {
+    height: 3rem;
+    background-color: var(--white);
+    padding: 15px 15px;
+    border-radius: 3rem;
 }
 
 .DetailsRightPart {
@@ -104,6 +126,9 @@
 
 .DetailProductName {
     color: var(--fontColor);
+}
+.DetailProductNameDark , .DetailProductGoalsDark {
+    color: var(--whiteDark);
 }
 
 .DetailProductGoals {
