--- a/store/src/components/DetailProduct.module.css
+++ b/store/src/components/DetailProduct.module.css
@@ -153,7 +153,7 @@
     }
 }
 @media screen and (max-width: 980px) {
-    .DetailsBoxContainer {
+    .DetailsBoxContainer , .DetailsBoxContainerDark {
         width: 85%;
     }
 }
