--- a/store/src/components/Footer.module.css
+++ b/store/src/components/Footer.module.css
@@ -112,7 +112,7 @@
 }
 
 @media screen and (max-width: 660px) {
-    .footer {
+    .footer , .footerDark {
         padding: 2rem 2rem 4rem 2rem;
     }
 }
